--- a/RGB generator/index.html
+++ b/RGB generator/index.html
@@ -59,29 +59,23 @@
         }
 
         option.addEventListener('click', function () {
-          current++;
           if (option.textContent == ans) {
             console.log('yay');
             status.textContent = 'correct';
             score = score + 1;
             record.textContent = score;
-            
-            if (current < total) {
-              generateNewQuestion();
-              curQuestion.textContent = current;
-            } else {
-              alert(`Your score is ${score}/${total}`);
-            }
           } else {
             console.log('nah')
             status.textContent = 'wrong';
-            
-             if (current < total) {
-              generateNewQuestion();     
-              curQuestion.textContent = current;
-            } else {
-              alert(`Your score is ${score}/${total}`);
-            }
+          }
+
+          current++; // Moved outside of the if-else statement
+
+          if (current < total) {
+            generateNewQuestion();
+            curQuestion.textContent = current;
+          } else {
+            alert(`Your score is ${score}/${total}`);
           }
         })
       })
